--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 Hello there, awesome person!
 
 <html>
+  <head>
+    <title> my intro to html site </title>
+  </head>
   <body>
     hello world
   </body>
