--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@ Hello there, awesome person!
     <p>
       <img src='https://avatars.githubusercontent.com/u/76395903?v=4'>
     </p>
+    <ol>
+      <li>This</li>
+      <li>Is an</li>
+      <li>Ordered list</li>
+    </ol>
+
+    <ul>
+      <li>This</li>
+      <li>Is an</li>
+      <li>Unordered list</li>
+    </ul>
   </body>
 </html>
