--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Hello there, awesome person!
       <li>This</li>
       <li>Is an</li>
       <li>Unordered list</li>
+      <li>Github <a href="https://github.com">GitHub</a>!</li>
     </ul>
   </body>
 </html>
