--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ Hello there, awesome person!
 <html>
   <head>
     <title> my intro to html site </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     hello world
