--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
-Hello there, awesome person!
-
 <html>
-  <head>
-    <title> my intro to html site </title>
-    <link rel="stylesheet" href="style.css">
-  </head>
   <body>
-    hello world
-    <h1> adeebatgithub </h1>
+    <head>
+      <title> my intro to html site </title>
+      <link rel="stylesheet" href="style.css">
+    </head>
+    <div class='navbar'>
+      <h1>INTRO TO HTML</h1>
+      <h1 id='un'> adeebatgithub </h1>
+    </div>
+    <div class='intro'>
+      <p>
+        My Name Is Adeeb Danish,
+      </p>
+        Am from Wayanad,
+        Am Studign at AWH Engneering collage  
+      </p>
+    </div>
     <p>
       <img src='https://avatars.githubusercontent.com/u/76395903?v=4'>
     </p>
     <ol>
-      <li>This</li>
-      <li>Is an</li>
-      <li>Ordered list</li>
+        <li>This</li>
+        <li>Is an</li>
+        <li>Ordered list</li>
     </ol>
 
     <ul>
-      <li>This</li>
-      <li>Is an</li>
-      <li>Unordered list</li>
-      <li>Github <a href="https://github.com">GitHub</a>!</li>
+        <li>This</li>
+        <li>Is an</li>
+        <li>Unordered list</li>
+        <li><a href='https://github.com'> this is a link to github </a></li>
     </ul>
   </body>
 </html>
