--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
       <title> my intro to html site </title>
       <link rel="stylesheet" href="style.css">
     </head>
-    <div class='navbar'>
-      <h1>INTRO TO HTML</h1>
-      <h1 id='un'> adeebatgithub </h1>
-    </div>
+ 
+    <h1>INTRO TO HTML</h1>
+    <h1> adeebatgithub </h1>
     <div class='intro'>
       <p>
         My Name Is Adeeb Danish,
