--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="style.css">
     </head>
  
-    <h1>INTRO TO HTML</h1>
+    <h1 id='hd'>INTRO TO HTML</h1>
     <h1> adeebatgithub </h1>
     <p>
       My Name Is Adeeb Danish,
