--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
       <link rel="stylesheet" href="style.css">
     </head>
  
-    <h1 id='hd'>INTRO TO HTML</h1>
+    <div calss='navbar'>
+      <h1>INTRO TO HTML</h1>
+    </div>
     <h1> adeebatgithub </h1>
-    <p>
-      My Name Is Adeeb Danish,
-    </p>
-      Am from Wayanad,
-      Am Studign at AWH Engneering collage  
-    </p>
+    <div class='intro'>
+      <p>
+        My Name Is Adeeb Danish,
+      </p>
+        Am from Wayanad,
+        Am Studign at AWH Engneering collage  
+      </p>
+    </div>
     <p>
       <img src='https://avatars.githubusercontent.com/u/76395903?v=4'>
     </p>
