--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
       <link rel="stylesheet" href="style.css">
     </head>
  
-    <div calss='navbar'>
-      <h1>INTRO TO HTML</h1>
-    </div>
-    <h1> adeebatgithub </h1>
+    <h1>INTRO TO HTML</h1>
+    <h2><a href='https://github.com/adeebatgithub'>adeebatgithub</></h2>
     <div class='intro'>
-      <p>
-        My Name Is Adeeb Danish,
-      </p>
-        Am from Wayanad,
-        Am Studign at AWH Engneering collage  
-      </p>
+     
     </div>
     <p>
-      <img src='https://avatars.githubusercontent.com/u/76395903?v=4'>
+       <img src='https://avatars.githubusercontent.com/u/76395903?v=4'>
     </p>
     <ol>
         <li>This</li>
@@ -27,10 +20,9 @@
     </ol>
 
     <ul>
-        <li>This</li>
-        <li>Is an</li>
-        <li>Unordered list</li>
-        <li><a href='https://github.com'> this is a link to github </a></li>
+        <li><a href='https://www.google.co.in/'>Google</a></li>
+        <li><a href='https://github.com'> Github </a></li>
+      <li><a href='https://github.com/adeebatgithub'>My Github </a></li>
     </ul>
   </body>
 </html>
